Pipelines/Backend/deployments/backend-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
        - name: backend-api
          image: hungnd2/devops-bootcamp-backend-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 7
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          volumeMounts:
            - name: log-volume
              mountPath: /app/log
      volumes:
        - name: log-volume
          hostPath:
            path: /opt/logs/backend-api #mkdir -p /opt/logs/backend-api/
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  selector:
    app: backend-api
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /backend-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-api-service
                port:
                  number: 5000
